tests/snapshots/examples_fixtures/type_system__failing__99_multi_error_continuation.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/99_multi_error_continuation.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E002]: IMMUTABLE BINDING

Cannot reassign to immutable variable `x`.

  --> examples/type_system/failing/99_multi_error_continuation.flx:4:5
  |
4 |     x = 2
  |     ^^^^^

Hint:
  In Flux, bindings are immutable. Compute a new value with a new binding name (for example: `let next_x = ...`).


--> compiler error[E300]: TYPE UNIFICATION ERROR

The value of `y` does not match its type annotation.

  --> examples/type_system/failing/99_multi_error_continuation.flx:5:18
  |
5 |     let y: Int = "oops"
  |                  ^^^^^^
  |                  ------ this is `String`
  |            --- but `y` was annotated as `Int`

Help:
  Change `y` to a `Int` value or update the annotation to `String`.

Found 2 errors.
== stdout ==
<not executed>
